JMEOS v1.1 with the number types working